Emilie : MAJ du style.css, UserController, User Entity, MainController, Campus : campusName (avant : name);  Création des Form SignInType et SignUpType ;  MAJ des liens dans le fichier base.html.twig ;   essai pour inscrire un nouvel utilisateur : EN COURS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,3 +50,22 @@ footer {
     justify-content: space-evenly;
     flex-direction: row;
 }
+
+.group_buttons_index {
+    display: flex;
+}
+
+.button {
+    display: flex;
+    background-color: black;
+    color: white;
+    margin: 5px;
+    height: 5vh;
+    width: 200px;
+    align-items: center;
+}
+
+.button a {
+    text-decoration: none;
+    color: white;
+}
