--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,10 +30,10 @@
     <nav>
         <ul>
             {% block NavMenu %}
-                <li><a href="{{ url('#') }}">Accueil</a></li>
-                <li><a href="{{ url('#') }}">About us</a></li>
-                <li><a href="{{ url('#') }}">Liste des sorties</a></li>
-                <li><a href="{{ url('#') }}">Ajouter une sorties</a></li>
+                <li><a href="{{ url('main_index') }}">Accueil</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Liste des sorties</a></li>
+                <li><a href="">Ajouter une sorties</a></li>
             {% endblock %}
         </ul>
     </nav>
