Emilie : on retire toutes les relations (tout mis en commentaires)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,10 +20,15 @@
 
         {# ********************************************* #}
         <h1>
+            Sortir.com<br>
+            <em>Sortez en sécurité, sortez masqués !</em>
+        </h1>
+        <h2>
             {% block Pagetitle %}
                 //Titre de la page ici
             {% endblock %}
-        </h1>
+        </h2>
+
         {# ********************************************* #}
     </div>
 
