--- a/templates/user/homeSignedIn.html.twig
+++ b/templates/user/homeSignedIn.html.twig
@@ -1,1 +1,9 @@
 {% extends('./base.html.twig') %}
+
+ {% block Pagetitle %}
+    Bonjour {{ newUser.getUsername() }} !
+ {% endblock %}
+
+ {% block main %}
+
+ {% endblock %}
