--- a/templates/user/signIn.html.twig
+++ b/templates/user/signIn.html.twig
@@ -9,5 +9,20 @@
 
      Connectez-vous :
 
+     <div class="form">
+     {{ form_start () }}
+     <div class="form_groupe">
+
+         {{ form_label (newUserForm.name) }}
+         {{ form_widget (newUserForm.name) }}
+         {{ form_errors (newUserForm.name) }}
+
+     </div>
+
+     <div class="form_groupe">
+         {{ form_label (newUserForm.surname) }}
+         {{ form_widget (newUserForm.surname) }}
+         {{ form_errors (newUserForm.surname) }}
+     </div>
 
  {% endblock %}
