Création du formulaire OutingType avec relation entité State, génération automatique de l'état de la sortie lors de la création de la sortie. Relation ManyToOne entre Outing et State effective.

--- a/templates/outing/createOuting.html.twig
+++ b/templates/outing/createOuting.html.twig
@@ -1,1 +1,14 @@
 {% extends 'base.html.twig' %}
+
+
+{% block main %}
+    <h1>Créer une nouvelle sortie</h1>
+
+
+    {{ form_start(outingForm) }}
+    {{ form_widget(outingForm) }}
+    <input type="submit" value="Valider">
+    {{ form_end(outingForm) }}
+
+{% endblock %}
+
