--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
                 <li><a href="{{ url('main_index') }}">Accueil</a></li>
                 <li><a href="">About us</a></li>
                 <li><a href="">Liste des sorties</a></li>
-                <li><a href="">Ajouter une sorties</a></li>
+                <li><a href="{{ url('create_outing') }}">Ajouter une sorties</a></li>
             {% endblock %}
         </ul>
     </nav>
