Juliette : UserType modifié, form presque terminé, ajout de mdp,confirmation, et villes dans le form. Ajout de la relation many to many dans ville et user.
ToDo = ajout d'image dans le form et du coup un champ image dans user

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,8 +47,15 @@
 
 {# ********************************************* #}
 <main>
+    {% for type, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="flash flash-{{ type }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
     {% block main %}
-        //Corps de la page ici
+
     {% endblock %}
 </main>
 {# ********************************************* #}
