Juliette : affichage du profil ok!

--- a/templates/user/myProfile.html.twig
+++ b/templates/user/myProfile.html.twig
@@ -36,8 +36,8 @@
         </div>
 
         <div class="form_groupe">
-            {{ form_label (userModifyForm.usersCity,'ville de rattachement') }}
-            {{ form_widget (userModifyForm.usersCity) }}
+            {{ form_label (userModifyForm.campus,'ville de rattachement') }}
+            {{ form_widget (userModifyForm.campus) }}
             <!--  {{ form_errors (userModifyForm.email) }}-->
         </div>
 
