--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,13 +23,15 @@
             Sortir.com<br>
             <em>Sortez en sécurité, sortez masqués !</em>
         </h1>
-        <h2>
-            {% block Pagetitle %}
-                //Titre de la page ici
-            {% endblock %}
-        </h2>
-
         {# ********************************************* #}
+    </div>
+
+    <div>
+        {% if app.user %}
+            <div class="mb-3">
+                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
     </div>
 
     <nav>
@@ -41,12 +43,19 @@
                 <li><a href="">Ajouter une sorties</a></li>
             {% endblock %}
         </ul>
+
     </nav>
 
 </header>
 
 {# ********************************************* #}
 <main>
+    <h2>
+        {% block Pagetitle %}
+            //Titre de la page ici
+        {% endblock %}
+    </h2>
+
     {% block main %}
         //Corps de la page ici
     {% endblock %}
