--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,8 @@
                 <li><a href="{{ url('main_index') }}">Accueil</a></li>
                 <li><a href="">About us</a></li>
                 <li><a href="">Liste des sorties</a></li>
-                <li><a href="{{ url('create_outing') }}">Ajouter une sorties</a></li>
+                <li><a href="{{ url('user_my_profile') }}">Modifier mon profil</a></li>
+                <li><a href="{{ url('create_outing') }}">Ajouter une sortie</a></li>
             {% endblock %}
         </ul>
 
