--- a/templates/user/myProfile.html.twig
+++ b/templates/user/myProfile.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block main %}
-
+ {% if app.user %}
     <div class="form">
         {{ form_start (userModifyForm) }}
         <div class="form_groupe">
@@ -51,6 +51,9 @@
         <button type="submit">Envoyer !</button>
         {{ form_end (userModifyForm) }}
     </div>
+     {% else %}
+     <h1>Vous devez etre connectés pour acceder à cette page</h1>
 
+{% endif %}
 {% endblock %}
 
