Juliette : user peut se modifier mais ne peut pas prendre le meme username qu'un autre. Aucun probleme de session

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,7 +66,8 @@
 <footer>
     <p>&copy; Sortir.com 2021</p>
     <p>
-        By Awesome Group 3 (https://github.com/julietteVarga/ProjetPHPGroupe3.git)
+        By Awesome Group 3 (
+        <a href="https://github.com/julietteVarga/ProjetPHPGroupe3.git" > lien github</a>)
     </p>
     <p>
         <ul>
