Modification du controller sortie, récupération des informations du User en session pour ajouter le site de rattachement. Modification du template pour afficher le site de rattachement stocké en BDD. Mise en place d'une requête spécialisée findbyusername dans le UserRepository.php.

--- a/templates/outing/createOuting.html.twig
+++ b/templates/outing/createOuting.html.twig
@@ -47,16 +47,11 @@
             {{ form_errors (outingForm.outingInfos) }}
         </div>
         <div class="form_groupe">
-            {{ form_label (outingForm.campusOrganizer) }}
-            {{ form_widget (outingForm.campusOrganizer) }}
-            {{ form_errors (outingForm.campusOrganizer) }}
-        </div>
-        <div class="form_groupe">
             {{ form_label (outingForm.location) }}
             {{ form_widget (outingForm.location) }}
             {{ form_errors (outingForm.location) }}
         </div>
-        
+        <p> Ville organisatrice : {{ app.user.getCampus }}</p>
         <br>
         <button type="submit">Envoyer !</button>
         {{ form_end (outingForm) }}
