--- a/templates/admin/signUp.html.twig
+++ b/templates/admin/signUp.html.twig
@@ -1,15 +1,24 @@
 {% extends('./base.html.twig') %}
 
  {% block Pagetitle %}
-    Bienvenue !
+
  {% endblock %}
 
  {% block main %}
 
-     <h2>Inscrivez-vous :</h2>
+      <div class="block1">
+
+     <h2>Inscrire un nouvel utilisateur :</h2>
 
      <div class="form">
          {{ form_start (newUserForm) }}
+
+         <div class="form_groupe">
+             {{ form_widget (newUserForm.isActive) }}
+             {{ form_label (newUserForm.isActive) }}
+             {{ form_errors (newUserForm.isActive) }}
+         </div>
+
          <div class="form_groupe">
 
              {{ form_label (newUserForm.name) }}
@@ -47,7 +56,14 @@
              {{ form_widget (newUserForm.email) }}
              {{ form_errors (newUserForm.email) }}
          </div>
-{#
+
+         <div class="form_groupe">
+             {{ form_label (newUserForm.roles) }}
+             {{ form_widget (newUserForm.roles) }}
+             {{ form_errors (newUserForm.roles) }}
+         </div>
+
+         {#
          <div class="form_groupe">
              {{ form_label (newUserForm.campus) }}
              {{ form_widget (newUserForm.campus) }}
@@ -58,6 +74,7 @@
          <button type="submit">Envoyer !</button>
          {{ form_end (newUserForm) }}
 
+     </div>
      </div>
 
 
