Emilie : accès Admin pour créer campus ok ; accès page d'accueil différent fonction connexion ou non ; création page d'accueil en mode connectée homeSignedIn.html.twig : début du tableau pour récupérer la liste des sorties ; RESTE A FAIRE : les filtres, et la colonne 'Actions'. MAJ du CSS aussi :)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,3 +69,22 @@ footer {
     text-decoration: none;
     color: white;
 }
+
+.hometitle {
+    text-align: end;
+}
+
+.tableau_home td {
+    width: 10vw;
+    min-width: 100px;
+    text-align: center;
+    font-size: 18px;
+    background-color: rgba(130,130,130,0.5);
+}
+
+.tableau_home th {
+    background-color: #2e3136;
+    font-size: 20px;
+    color: white;
+    height: 40px;
+}
