--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,11 +37,10 @@
     <nav>
         <ul>
                 <li><a href="{{ url('main_index') }}">Accueil</a></li>
-                <li><a href="">Liste des sorties</a></li>
                 <li><a href="{{ url('create_outing') }}">Ajouter une sorties</a></li>
                 <li><a href="{{ url('user_my_profile') }}">Mon profil</a></li>
             {% if is_granted ('ROLE_ADMIN') %}
-                <li><a href="{{ url('admin_signup') }}">Participants</a></li>
+                <li><a href="{{ url('admin_users_list') }}">Participants</a></li>
                 <li><a href="{{ url('admin_city') }}">Villes</a></li>
                 <li><a href="{{ url('admin_campus') }}">Campus</a></li>
             {% endif %}
@@ -55,11 +54,22 @@
 
 {# ********************************************* #}
 <main>
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="flash-{{ label }}">
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endfor %}
+
+
     <h2>
         {% block Pagetitle %}
             //Titre de la page ici
         {% endblock %}
     </h2>
+
+
 
     {% block main %}
         //Corps de la page ici
