--- a/templates/admin/signUp.html.twig
+++ b/templates/admin/signUp.html.twig
@@ -1,14 +1,12 @@
 {% extends('./base.html.twig') %}
 
  {% block Pagetitle %}
-
+     Inscrire un nouvel utilisateur
  {% endblock %}
 
  {% block main %}
 
       <div class="block1">
-
-     <h2>Inscrire un nouvel utilisateur :</h2>
 
      <div class="form">
          {{ form_start (newUserForm) }}
