--- a/templates/admin/addCampus.html.twig
+++ b/templates/admin/addCampus.html.twig
@@ -1,7 +1,7 @@
 {% extends('./base.html.twig') %}
 
 {% block Pagetitle %}
-Ajouter un Campus :
+Ajouter un Campus
 {% endblock %}
 
  {% block main %}
