--- a/templates/user/myProfile.html.twig
+++ b/templates/user/myProfile.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base.html.twig' %}
+
+{% block Pagetitle %}
+Mon profil
+{% endblock %}
+
 {% block main %}
  {% if app.user %}
     <div class="form">
@@ -19,8 +24,14 @@
            {{ form_errors (userModifyForm.username) }}
         </div>
         <div class="form_groupe">
-            {{ form_row(userModifyForm.password.first) }}
-            {{ form_row(userModifyForm.password.second) }}
+            {{ form_label(userModifyForm.password.first) }}
+            {{ form_widget(userModifyForm.password.first) }}
+            {{ form_errors(userModifyForm.password.first) }}
+        </div>
+        <div class="form_groupe">
+            {{ form_label(userModifyForm.password.second) }}
+            {{ form_widget(userModifyForm.password.second) }}
+            {{ form_errors(userModifyForm.password.second) }}
         </div>
 
         <div class="form_groupe">
