--- a/templates/user/homeSignedIn.html.twig
+++ b/templates/user/homeSignedIn.html.twig
@@ -15,7 +15,7 @@
              <tr>
                  <th>Nom de la sortie</th>
                  <th>Date de la sortie</th>
-                 <th>Clotûre</th>
+                 <th>Clotûre des inscriptions</th>
                  <th>Inscrits/places</th>
                  <th>Etat</th>
                  <th>Inscrit</th>
@@ -35,7 +35,7 @@
                          <td>
                              {# TODO :: gérer l'affichage des liens en fonction des inscriptions de l'utilisateur !! et de son statut organisateur ou non #}
 
-                             {% if outing.state == 'En création' %}
+                             {% if outing.state == 'En création' and app.user== outing.organizer%}
                              <a href="#">Modifier</a> - <a href="#">Publier</a>
                              {% endif %}
 
@@ -57,6 +57,7 @@
 
                          </td>
                          </tr>
+
                      {% endfor %}
 
              {% endfor %}
