--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,11 +26,9 @@
         See https://symfony.com/doc/current/security/remember_me.html
        #}
         <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Se souvenir de moi
-            </label>
+                <input type="checkbox" id="remember_me" name="_remember_me">
+            <label for="remember_me"> Se souvenir de moi </label>
         </div>
-
 
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
